--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
   background-color: var(--color-black);
+  margin: 0;
 }
 
 .line {
@@ -16,27 +17,20 @@ body {
 .horizontal {
   width: 100%;
   height: 1px;
-  top: 50%;
 }
 
 .vertical {
   height: 100%;
   width: 1px;
-  left: 50%;
 }
 
 .target {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .tag {
   color: var(--color-white);
   position: absolute;
-  top: 50%;
-  left: 50%;
   font-size: 38px;
-  transform: translate(20px, 20px);
+  margin: 20px;
 }
